# myflower

baselines/: 1
baselines/fedbpt/: README.md  pyproject.toml
baselines/fedbpt/fedbpt/: LMForwardAPI.py  __init__.py  acc_plot.py  client.py  client_app.py  data_process.py  main.py  server.py  server_app.py  simulate.py  task.py  utils.py
baselines/fedbpt/fedbpt/client/: fedavgbbt_client.py  fedbpt_client.py  fedone_gsbdpl_client.py
baselines/fedbpt/fedbpt/conf/: config.yaml
baselines/fedbpt/fedbpt/metrics/: metrics.py
baselines/fedbpt/fedbpt/outputs/: acc_plot.py  sigma_plot.py
baselines/fedbpt/fedbpt/outputs/2025-06-09/21-36-14/.hydra/: config.yaml  hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-09/23-19-36/.hydra/: config.yaml  hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-12/12-24-23/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/15-08-07/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/16-46-54/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/17-08-44/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/19-22-51/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/20-31-55/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/outputs/2025-06-13/21-10-23/.hydra/: hydra.yaml
baselines/fedbpt/fedbpt/src/: fedbpt_train.py
baselines/fedbpt/fedbpt/strategy/: fedavgbbpt_strategy.py  fedbpt_cluster_strategy.py  fedbpt_dg_strategy.py  fedbpt_strategy.py  fedone_gsbdpl_strategy.py
baselines/fedbpt/outputs/2025-06-16/10-13-48/.hydra/: config.yaml  hydra.yaml
(+64 files in other folders)
